--- a/esjadmin/src/main/resources/application.yml
+++ b/esjadmin/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/base_project?useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://127.0.0.1:3306/esjadmin?useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
     type: com.alibaba.druid.pool.DruidDataSource
     # 初始连接数
     initial-size: 5
@@ -33,12 +33,12 @@ spring:
 
 
 # devtools配置
-  devtools:
-    restart:
-      poll-interval: 1000ms
-      quiet-period: 999ms
+#  devtools:
+#    restart:
+#      poll-interval: 1000ms
+#      quiet-period: 999ms
 
-#mybatis-plus配置
+# mybatis-plus配置
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.ershijin.esjadmin.model
@@ -56,6 +56,20 @@ logging:
   level:
 #    root: debug
     com.ershijin.esjadmin: debug
+
+task:
+  pool:
+    # 核心线程池大小
+    core-pool-size: 10
+    # 最大线程数
+    max-pool-size: 30
+    # 活跃时间
+    keep-alive-seconds: 60
+    # 队列容量
+    queue-capacity: 50
+
+
+
 
 # 是否本地解析IP地区
 ip:
