自动生成功能能用

--- a/esjadmin/system/src/main/resources/generator.properties
+++ b/esjadmin/system/src/main/resources/generator.properties
@@ -22,6 +22,6 @@ text=String
 mediumtext=String
 longtext=String
 
-date=Timestamp
-datetime=Timestamp
-timestamp=Timestamp
+date=LocalDateTime
+datetime=LocalDateTime
+timestamp=LocalDateTime
