优化代码生成时间段选择，QueryHelp模糊查询

--- a/esjadmin/system/src/main/resources/application.yml
+++ b/esjadmin/system/src/main/resources/application.yml
@@ -23,11 +23,11 @@ spring:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
   mvc:
-    #date-format: yyyy-MM-dd HH:mm:ss
-    # 视图配置
+    date-format: yyyy-MM-dd HH:mm:ss
     format:
       date: yyyy-MM-dd HH:mm:ss
-  #    view:
+# 视图配置
+#    view:
 #      prefix:
 #      suffix:
 
