--- a/esjadmin/pom.xml
+++ b/esjadmin/pom.xml
@@ -99,6 +99,13 @@
             <version>1.3.1.Final</version>
         </dependency>
 
+        <!-- Java图形验证码 -->
+        <dependency>
+            <groupId>com.github.whvcse</groupId>
+            <artifactId>easy-captcha</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
         <!-- excel 工具 -->
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
         <dependency>
