--- a/esjadmin/system/src/main/resources/application.yml
+++ b/esjadmin/system/src/main/resources/application.yml
@@ -2,36 +2,13 @@ server:
   port: 8081
 
 spring:
+  profiles:
+    active: dev
   datasource:
-    username: root
-    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/esjadmin?useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
     type: com.alibaba.druid.pool.DruidDataSource
-    # 初始连接数
-    initial-size: 5
-    # 最大连接池数量
-    max-active: 50
-    # 最小连接池数量
-    min-idle: 10
-    # 连接等待超时时间
-    max-wait: 10000
     # 隔离级别为读写提交
     default-transaction-isolation: 2
-
-  redis:
-    database: 0
-    host: 127.0.0.1
-    port: 6379
-    password:
-    timeout: 5000   #连接超时时间
-    jedis:
-      pool:
-        max-wait: 30000  # 连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-active: 100 # 连接池最大连接数（使用负值表示没有限制)
-        max-idle: 20 # 连接池中的最大空闲连接
-        min-idle: 0 # 连接池中的最小空闲连接
-
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
@@ -39,17 +16,6 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     format:
       date: yyyy-MM-dd HH:mm:ss
-# 视图配置
-#    view:
-#      prefix:
-#      suffix:
-
-
-# devtools配置
-#  devtools:
-#    restart:
-#      poll-interval: 1000ms
-#      quiet-period: 999ms
 
 # mybatis-plus配置
 mybatis-plus:
@@ -64,12 +30,6 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 #    lazy-loading-enabled: true
 
-# 日志配置
-logging:
-  level:
-#    root: debug
-    com.ershijin: debug
-
 task:
   pool:
     # 核心线程池大小
@@ -82,16 +42,9 @@ task:
     queue-capacity: 50
 
 
-
-
 # 是否本地解析IP地区
 ip:
   local-parsing: true
-
-
-#是否允许生成代码，生产环境设置为false
-generator:
-  enabled: true
 
 # 登录相关配置
 login:
