--- a/esjadmin/system/src/main/resources/application-dev.yml
+++ b/esjadmin/system/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: root
-    password: 123456
+    password:
     url: jdbc:mysql://127.0.0.1:3306/esjadmin?useUnicode=true&characterEncoding=utf-8&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
     # 初始连接数
     initial-size: 5
